--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -5,17 +5,30 @@ uBottomActionKey = 47
 uLeftActionKey = 48
 
 [TopPage]
-uTopType = 0
-uTopSelectedItem = 0
-sRefreshTopItems =
-sSelectedTopItemForm = 0
-uTopSlotAction = 0
-uTopHandSelection = 1
-uTopTypeLeft = 0
-sRefreshTopItemsLeft =
-sSelectedTopItemFormLeft = 0
-uTopSelectedItemLeft = 0
-uTopSlotActionLeft = 0
+uType = 0
+uHandSelection = 1
+sRefreshItems = 
+sSelectedItemForm = 0
+uSelectedItem = 0
+uSlotAction = 0
+uTypeLeft = 0
+sRefreshItemsLeft = 
+sSelectedItemFormLeft = 0
+uSelectedItemLeft = 0
+uSlotActionLeft = 0
+
+[RightPage]
+uType = 0
+uHandSelection = 1
+sRefreshItems = 
+sSelectedItemForm = 0
+uSelectedItem = 0
+uSlotAction = 0
+uTypeLeft = 0
+sRefreshItemsLeft = 
+sSelectedItemFormLeft = 0
+uSelectedItemLeft = 0
+uSlotActionLeft = 0
 
 [HudSetting]
 fHudImageScaleWidth = 1.0
