--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -30,6 +30,32 @@ sSelectedItemFormLeft = 0
 uSelectedItemLeft = 0
 uSlotActionLeft = 0
 
+[BottomPage]
+uType = 0
+uHandSelection = 1
+sRefreshItems = 
+sSelectedItemForm = 0
+uSelectedItem = 0
+uSlotAction = 0
+uTypeLeft = 0
+sRefreshItemsLeft = 
+sSelectedItemFormLeft = 0
+uSelectedItemLeft = 0
+uSlotActionLeft = 0
+
+[LeftPage]
+uType = 0
+uHandSelection = 1
+sRefreshItems = 
+sSelectedItemForm = 0
+uSelectedItem = 0
+uSlotAction = 0
+uTypeLeft = 0
+sRefreshItemsLeft = 
+sSelectedItemFormLeft = 0
+uSelectedItemLeft = 0
+uSlotActionLeft = 0
+
 [HudSetting]
 fHudImageScaleWidth = 1.0
 fHudImageScaleHeight = 1.0
