--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: main
-      - name: Checkout submodules
-        run: git submodule update --init --recursive
+          submodules: recursive
 
       - name: Setup MSVC Environment
         uses: ilammy/msvc-dev-cmd@v1.10.0
