--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -71,3 +71,5 @@ uIconOpacity = 125
 fIconScaleWidth = 0.110000
 fIconScaleHeight = 0.110000
 uSlotButtonFeedback = 200
+fSlotCountTextOffset = 10
+fSlotCountTextFontSize = 20
