--- a/LamasTinyHUD.ini
+++ b/LamasTinyHUD.ini
@@ -5,4 +5,5 @@ iLogLevel = 2
 
 [Image]
 ;will be applied to slots and keys (so they they are a bit under the main image)
-fExtraSizeForImage = 1.0
+fExtraSizeForImage = 0.0
+bDrawKeyBackground = 0
