--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -1116,6 +1116,17 @@
                         "formatString": "{0}",
                         "sourceType": "ModSettingFloat"
                     }
+                },
+                {
+                    "id": "uControllerSet:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_Controller_OptionText",
+                    "type": "enum",
+                    "help": "$LamasTinyHUD_HudSetting_Controller_InfoText",
+                    "valueOptions": {
+                        "options": ["$LamasTinyHUD_HudSetting_PS", "$LamasTinyHUD_HudSetting_XBOX"],
+                        "sourceType": "ModSettingInt",
+                        "defaultValue": 0
+                    }
                 }
             ]
         }
