--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -49,6 +49,22 @@
                     "valueOptions": {
                         "sourceType": "ModSettingInt"
                     }
+                },
+                {
+                    "text": "$LamasTinyHUD_Controls_Controller",
+                    "type": "header",
+                    "position": 1
+                },
+                {
+                    "id": "uControllerSet:Controls",
+                    "text": "$LamasTinyHUD_Controls_Controller_OptionText",
+                    "type": "enum",
+                    "help": "$LamasTinyHUD_Controls_Controller_InfoText",
+                    "valueOptions": {
+                        "options": ["$LamasTinyHUD_Controls_PS", "$LamasTinyHUD_Controls_XBOX"],
+                        "sourceType": "ModSettingInt",
+                        "defaultValue": 0
+                    }
                 }
             ]
         },
@@ -1041,21 +1057,6 @@
                         "step": 0.01,
                         "formatString": "{2}",
                         "sourceType": "ModSettingFloat"
-                    }
-                },
-                {
-                    "text": "$LamasTinyHUD_HudSetting_HeaderText_Controller",
-                    "type": "header"
-                },
-                {
-                    "id": "uControllerSet:HudSetting",
-                    "text": "$LamasTinyHUD_HudSetting_Controller_OptionText",
-                    "type": "enum",
-                    "help": "$LamasTinyHUD_HudSetting_Controller_InfoText",
-                    "valueOptions": {
-                        "options": ["$LamasTinyHUD_HudSetting_PS", "$LamasTinyHUD_HudSetting_XBOX"],
-                        "sourceType": "ModSettingInt",
-                        "defaultValue": 0
                     }
                 },
                 {
