--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -1,8 +1,9 @@
 [Controls]
-uTopActionKey = 45
-uRightActionKey = 46
-uBottomActionKey = 47
-uLeftActionKey = 48
+uTopActionKey = 10
+uRightActionKey = 11
+uBottomActionKey = 12
+uLeftActionKey = 13
+uToggleKey = 27
 uControllerSet = 0
 
 [TopPage]
@@ -57,6 +58,58 @@ sSelectedItemFormLeft = 0
 uSelectedItemLeft = 0
 uSlotActionLeft = 0
 
+[TopPageSetOne]
+uType = 0
+uHandSelection = 1
+sRefreshItems = 
+sSelectedItemForm = 0
+uSelectedItem = 0
+uSlotAction = 0
+uTypeLeft = 0
+sRefreshItemsLeft = 
+sSelectedItemFormLeft = 0
+uSelectedItemLeft = 0
+uSlotActionLeft = 0
+
+[RightPageSetOne]
+uType = 0
+uHandSelection = 1
+sRefreshItems = 
+sSelectedItemForm = 0
+uSelectedItem = 0
+uSlotAction = 0
+uTypeLeft = 0
+sRefreshItemsLeft = 
+sSelectedItemFormLeft = 0
+uSelectedItemLeft = 0
+uSlotActionLeft = 0
+
+[BottomPageSetOne]
+uType = 0
+uHandSelection = 1
+sRefreshItems = 
+sSelectedItemForm = 0
+uSelectedItem = 0
+uSlotAction = 0
+uTypeLeft = 0
+sRefreshItemsLeft = 
+sSelectedItemFormLeft = 0
+uSelectedItemLeft = 0
+uSlotActionLeft = 0
+
+[LeftPageSetOne]
+uType = 0
+uHandSelection = 1
+sRefreshItems = 
+sSelectedItemForm = 0
+uSelectedItem = 0
+uSlotAction = 0
+uTypeLeft = 0
+sRefreshItemsLeft = 
+sSelectedItemFormLeft = 0
+uSelectedItemLeft = 0
+uSlotActionLeft = 0
+
 [HudSetting]
 sDisplayResolutionWidth =
 sDisplayResolutionHeight = 
@@ -74,3 +127,6 @@ fIconScaleHeight = 0.110000
 uSlotButtonFeedback = 200
 fSlotCountTextOffset = 10
 fSlotCountTextFontSize = 20
+bDrawToggleButton = 1
+fToggleKeyOffsetX = 90
+fToggleKeyOffsetY = 90
