--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -130,3 +130,6 @@ fSlotCountTextFontSize = 20
 bDrawToggleButton = 1
 fToggleKeyOffsetX = 90
 fToggleKeyOffsetY = 90
+
+[MiscSetting]
+bActionCheck = 1
