[wip][fix][feature]
* fixed item duplication for weapons, it will be checked how many there
  are and how many are already equipped
* added new configuration method
* setting for the new config how long the a button has to be pressed to
  get into edit mode
* after you get a notification you can drink, eat, equip what you like,
  the last potion, food,.. will be set or the current setting of the
  hands. to exit just press the same key again and you should exit edit
  mode
* minor code cleanups, renames and moveing around
* the mcm setting menu does still work, but currently it does not sync
  with, just after a restart you get the latest settings

--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -75,6 +75,23 @@
                         "sourceType": "ModSettingInt",
                         "defaultValue": 0
                     }
+                },
+                {
+                    "text": "$LamasTinyHUD_Controls_Config",
+                    "type": "header"
+                },
+                {
+                    "id": "fConfigButtonHoldTime:Controls",
+                    "text": "$LamasTinyHUD_Controls_ConfigButtonHoldTime_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_Controls_ConfigButtonHoldTime_InfoText",
+                    "valueOptions": {
+                        "min": 3.0,
+                        "max": 35.0,
+                        "step": 1.0,
+                        "formatString": "{0}",
+                        "sourceType": "ModSettingFloat"
+                    }
                 }
             ]
         },
@@ -2106,6 +2123,15 @@
                     "text": "$LamasTinyHUD_MiscSetting_OptionText",
                     "type": "toggle",
                     "help": "$LamasTinyHUD_MiscSetting_InfoText",
+                    "valueOptions": {
+                        "sourceType": "ModSettingBool"
+                    }
+                },
+                {
+                    "id": "bEmptyHandSetting:MiscSetting",
+                    "text": "$LamasTinyHUD_EmptyHandSetting_OptionText",
+                    "type": "toggle",
+                    "help": "$LamasTinyHUD_EmptyHandSetting_InfoText",
                     "valueOptions": {
                         "sourceType": "ModSettingBool"
                     }
