--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -5,6 +5,7 @@ uBottomActionKey = 12
 uLeftActionKey = 13
 uToggleKey = 27
 uControllerSet = 0
+fConfigButtonHoldTime = 5
 
 [TopPage]
 uType = 0
@@ -133,3 +134,4 @@ fToggleKeyOffsetY = 90
 
 [MiscSetting]
 bActionCheck = 1
+bEmptyHandSetting = 1
