--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -7,109 +7,21 @@ uToggleKey = 27
 uControllerSet = 0
 fConfigButtonHoldTime = 5
 
-[TopPage]
+[Page]
+uPageList = 0
+sPage = 
+sPosition = 
 uType = 0
-uHandSelection = 1
-sRefreshItems = 
-sSelectedItemForm = 0
-uSelectedItem = 0
+uHandSelection = 0
 uSlotAction = 0
+sFormName =
+sSelectedItemForm =
 uTypeLeft = 0
-sRefreshItemsLeft = 
-sSelectedItemFormLeft = 0
-uSelectedItemLeft = 0
 uSlotActionLeft = 0
+sFormNameLeft = 
+sSelectedItemFormLeft =
+sResetSlot = 
 
-[RightPage]
-uType = 0
-uHandSelection = 1
-sRefreshItems = 
-sSelectedItemForm = 0
-uSelectedItem = 0
-uSlotAction = 0
-uTypeLeft = 0
-sRefreshItemsLeft = 
-sSelectedItemFormLeft = 0
-uSelectedItemLeft = 0
-uSlotActionLeft = 0
-
-[BottomPage]
-uType = 0
-uHandSelection = 1
-sRefreshItems = 
-sSelectedItemForm = 0
-uSelectedItem = 0
-uSlotAction = 0
-uTypeLeft = 0
-sRefreshItemsLeft = 
-sSelectedItemFormLeft = 0
-uSelectedItemLeft = 0
-uSlotActionLeft = 0
-
-[LeftPage]
-uType = 0
-uHandSelection = 1
-sRefreshItems = 
-sSelectedItemForm = 0
-uSelectedItem = 0
-uSlotAction = 0
-uTypeLeft = 0
-sRefreshItemsLeft = 
-sSelectedItemFormLeft = 0
-uSelectedItemLeft = 0
-uSlotActionLeft = 0
-
-[TopPageSetOne]
-uType = 0
-uHandSelection = 1
-sRefreshItems = 
-sSelectedItemForm = 0
-uSelectedItem = 0
-uSlotAction = 0
-uTypeLeft = 0
-sRefreshItemsLeft = 
-sSelectedItemFormLeft = 0
-uSelectedItemLeft = 0
-uSlotActionLeft = 0
-
-[RightPageSetOne]
-uType = 0
-uHandSelection = 1
-sRefreshItems = 
-sSelectedItemForm = 0
-uSelectedItem = 0
-uSlotAction = 0
-uTypeLeft = 0
-sRefreshItemsLeft = 
-sSelectedItemFormLeft = 0
-uSelectedItemLeft = 0
-uSlotActionLeft = 0
-
-[BottomPageSetOne]
-uType = 0
-uHandSelection = 1
-sRefreshItems = 
-sSelectedItemForm = 0
-uSelectedItem = 0
-uSlotAction = 0
-uTypeLeft = 0
-sRefreshItemsLeft = 
-sSelectedItemFormLeft = 0
-uSelectedItemLeft = 0
-uSlotActionLeft = 0
-
-[LeftPageSetOne]
-uType = 0
-uHandSelection = 1
-sRefreshItems = 
-sSelectedItemForm = 0
-uSelectedItem = 0
-uSlotAction = 0
-uTypeLeft = 0
-sRefreshItemsLeft = 
-sSelectedItemFormLeft = 0
-uSelectedItemLeft = 0
-uSlotActionLeft = 0
 
 [HudSetting]
 sDisplayResolutionWidth =
