--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -45,5 +45,7 @@ fToggleKeyOffsetX = 90
 fToggleKeyOffsetY = 90
 
 [MiscSetting]
-bActionCheck = 1
+bActionCheck = 0
 bEmptyHandSetting = 1
+bHideOutsideCombat = 0
+bDisableInputQuickLoot = 0
