--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -614,6 +614,15 @@
                     "valueOptions": {
                         "sourceType": "ModSettingBool"
                     }
+                },
+                {
+                    "id": "bElderDemonSouls:MiscSetting",
+                    "text": "$LamasTinyHUD_ElderDemonSouls_OptionText",
+                    "type": "toggle",
+                    "help": "$LamasTinyHUD_ElderDemonSouls_InfoText",
+                    "valueOptions": {
+                        "sourceType": "ModSettingBool"
+                    }
                 }
             ]
         }
